--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -144,6 +144,29 @@
   opacity: 0;
 }
 
+.added {
+  color: rgb(6, 125, 98);
+  font-size: 16px;
+
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+  visibility: visible;
+
+  /* At first, the "Added to cart" message will
+     be invisible. Use JavaScript to change the
+     opacity and make it visible. */
+  
+}
+
+.added-to-cart.fade-out {
+  opacity: 0;
+  visibility: hidden;
+}
+
+
 .added-to-cart img {
   height: 20px;
   margin-right: 5px;
